# libvmod-tinykvm

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile.am  README.md  TODO  bootstrap  build.sh  build_vc.sh  build_vmod.sh  build_work.sh  config.h.in  configure.ac  crash.txt  docker-compose.yaml  fdo.sh  flame.sh  fuzzer.c  fuzzer.sh  get_version  httperf.sh  notes.txt  p.sh  readvarnish.sh  release.sh  results.txt  riscv_timings.txt  runrv.sh  v.sh  vcp.version  vmod_fuzz.sh
cmake/: CMakeLists.txt  builtin_vcl.py  varnish.cmake  varnishtest.cmake  vmod.cmake
cmake/include/: all.h  config.h
cmake/jemalloc/: CMakeLists.txt
cmake/kvm_sandbox/: CMakeLists.txt  src  tinykvm
cmake/libadns/: CMakeLists.txt
cmake/libmse/: CMakeLists.txt
cmake/libvapi/: CMakeLists.txt
cmake/libvarnish/: CMakeLists.txt  vcs_version.h.in  vmod_abi.h.in
cmake/libvcc/: CMakeLists.txt
cmake/libvgz/: CMakeLists.txt
cmake/mkfs.mse/: CMakeLists.txt
cmake/riscv_sandbox/: CMakeLists.txt  libriscv  src
cmake/sandbox/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
cmake/varnishadm/: CMakeLists.txt
cmake/varnishd/: CMakeLists.txt  builtin_vcl.c  builtin_vcl.py
cmake/varnishd/fuzz/: fuzz_base64.c  fuzz_h2.c  fuzz_http.c  fuzz_proxy.c  fuzz_random.c  fuzz_response.c  fuzz_sha256.c  fuzz_vmod.c  fuzzer.c  hpack.c  http_server.c  varnish_http.c
cmake/varnishhist/: CMakeLists.txt
cmake/varnishlog/: CMakeLists.txt
cmake/varnishncsa/: CMakeLists.txt
cmake/varnishscoreboard/: CMakeLists.txt
cmake/varnishstat/: CMakeLists.txt
cmake/varnishtest/: CMakeLists.txt
cmake/varnishtop/: CMakeLists.txt
lib/libkvm/: CMakeLists.txt  adns.cpp  adns.hpp  archive.cpp  async_call.cpp  backend.cpp  binary_storage.hpp  common_defs.hpp  curl_fetch.cpp  curl_fetch.hpp  epoll_vm.cpp  instance_cache.hpp  kvm_settings.cpp  kvm_stats.cpp  kvm_vcc_api.cpp  live_update.cpp  long_lived.cpp  long_lived.hpp  machine_debug.cpp  machine_instance.cpp  machine_instance.hpp  machine_stats.hpp  mmap_file.hpp  paused_vm_state.hpp  program_instance.cpp  program_instance.hpp  scoped_duration.hpp  self_request.cpp  serialized_state.hpp  settings.hpp  system_calls.cpp  system_calls_api.cpp  system_calls_dns.cpp  system_calls_fetch.cpp  system_calls_http.cpp  system_calls_regex.cpp  tenant.cpp  tenant.hpp  tenant_instance.cpp  tenant_instance.hpp  (+6 more)
lib/libkvm/server/: epoll.cpp  epoll.hpp  socket_event.hpp  websocket.cpp  websocket.hpp
lib/libkvm/utils/: blocking_queue.hpp  cpptime.hpp  cpu_id.hpp  xorshift.hpp
libkvm-engine/: Makefile.am
src/: CMakeLists.txt  Makefile.am  VSC_vmod_kvm.c  VSC_vmod_kvm.h  VSC_vmod_kvm.vsc  compute.vsc  kvm_backend.c  kvm_backend.h  kvm_live_update.c  kvm_live_update.h  kvm_post.c  kvm_settings.h  missing.c  payload.c  readmem.cpp  to_string.c  varnish_interface.c  vmod_compute.c  vmod_compute.vcc  vmod_compute_event.c  vmod_kvm.h  vmod_kvm_adns.c  vmod_tinykvm.h  vmod_tinykvm_event.c
src/faster/: CMakeLists.txt  faster_http.cpp
src/fuzz/: fuzz_h2.c  fuzz_http.c  fuzzer.c  hpack.c  http_server.c  varnish_http.c
src/kvm/: CMakeLists.txt  Makefile.am  kvm_backend.c  kvm_backend.h  kvm_live_update.c  kvm_post.c  to_string.c  vmod_kvm.h  vmod_kvm.vcc
src/kvm/tests/: allowed_paths.vtc  alternate_programs.vtc  async_task.vtc  backend_request.vtc  cached_post_backend.vtc  curl_fetch.vtc  empty.vtc  error_handling.vtc  failing_program.vtc  hello_backend_world.vtc  http_fields.vtc  http_illegal_fields.vtc  infinite_init.vtc  infinite_loop.vtc  infinite_storage.vtc  insane_settings.vtc  kvm_api.h  live_update.vtc  main_arguments.vtc  max_work_memory.vtc  missing_storage.vtc  not_found.vtc  post_backend.vtc  program_not_ready.vtc  regex.vtc  (+8 more)
src/tinykvm/: CMakeLists.txt  Makefile.am  vmod_tinykvm.c  vmod_tinykvm.h  vmod_tinykvm.vcc
vmod/: CMakeLists.txt  README.md  run_test.sh  vmod.cmake  vmod_example.c
vmod/accept/: CMakeLists.txt  vmod_accept.c  vmod_accept.rst  vmod_accept.vcc
vmod/bodyaccess/: CMakeLists.txt  vmod_bodyaccess.c
vmod/cookie/: CMakeLists.txt
vmod/debug/: CMakeLists.txt
vmod/example/: CMakeLists.txt
vmod/header/: CMakeLists.txt  vmod_header.c
vmod/jwt/: CMakeLists.txt
vmod/libvjson/: CMakeLists.txt
vmod/std/: CMakeLists.txt  vmod_std.c  vmod_std_conversions.c  vmod_std_fileread.c  vmod_std_querysort.c
vmod/urlplus/: CMakeLists.txt
vmod/waf/: CMakeLists.txt  vmod_waf.vcc
vmods/: CMakeLists.txt  README.md  build.sh  vmod.cmake
vmods/accounting/: CMakeLists.txt
vmods/aclplus/: CMakeLists.txt
vmods/activedns/: CMakeLists.txt
vmods/blob/: CMakeLists.txt
vmods/bodyaccess/: CMakeLists.txt
vmods/brotli/: CMakeLists.txt
vmods/compute/: CMakeLists.txt  vmod_compute.vcc
vmods/cookie/: CMakeLists.txt  vmod_cookie.c
vmods/crypto/: CMakeLists.txt
vmods/debug/: CMakeLists.txt
vmods/deviceatlas/: CMakeLists.txt
vmods/directors/: CMakeLists.txt
vmods/edgestash/: CMakeLists.txt
vmods/example/: vmod_example.c
vmods/file/: CMakeLists.txt
vmods/goto/: CMakeLists.txt
vmods/header/: CMakeLists.txt  fix.patch  vmod_header.c
vmods/headerplus/: CMakeLists.txt
vmods/http/: CMakeLists.txt
vmods/insular/: CMakeLists.txt  vmod_insular.vcc
vmods/kvm/: CMakeLists.txt  vmod_kvm.vcc
vmods/kvstore/: CMakeLists.txt
vmods/libvjson/: CMakeLists.txt
vmods/mse/: CMakeLists.txt
vmods/proxy/: CMakeLists.txt
vmods/purge/: CMakeLists.txt
vmods/resolver/: CMakeLists.txt  resolver.vtc
vmods/rewrite/: CMakeLists.txt
vmods/riscv/: CMakeLists.txt  test.sh  update.sh  vmod_riscv.vcc
vmods/rtstatus/: CMakeLists.txt
vmods/session/: CMakeLists.txt
vmods/slicer/: CMakeLists.txt
vmods/std/: CMakeLists.txt
vmods/str/: CMakeLists.txt
vmods/synthbackend/: CMakeLists.txt
vmods/unix/: CMakeLists.txt
vmods/uri/: CMakeLists.txt
vmods/urlplus/: CMakeLists.txt
vmods/utils/: CMakeLists.txt
vmods/vtc/: CMakeLists.txt
vmods/waf/: CMakeLists.txt  vmod_waf.c  vmod_waf.vcc  waf.vcl
vmods/wssan/: CMakeLists.txt  wssan.c  wssan.vcc
vmods/xkey/: CMakeLists.txt
vmods/ykey/: CMakeLists.txt
(+451 files in other folders)
