cmake_minimum_required (VERSION 3.1.0)
project (varnish C)
#set (CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(VARNISH_PLUS "Build with the varnish plus repo" ON)
option(BUILD_VMODS  "Build most VMODs in varnish lib" ON)
option(NUMA_AWARE   "Enable NUMA-aware features" ON)
option(GPROF        "Enable profiling with gprof" OFF)
option(LTO_ENABLE   "Enable LTO builds" OFF)
option(MINIMAL      "Minimal build" OFF)
option(DEBUGGING    "Debugging build" OFF)
option(GCSECTIONS   "Garbage collect empty sections" OFF)
option(NATIVE       "Enable native performance" OFF)
option(SANITIZE     "Enable asan/ubsan sanitizers" OFF)
option(PGO_ENABLE   "Enable profile-guided optimizations" OFF)
option(PGO_GENERATE "PGO profile generation mode" ON)
option(AUTOFDO      "Enable AutoFDO profile optimizations" OFF)
set(PROFILE "../perf.afdo" CACHE STRING "Optimization profile path")
option(LIBFUZZER    "Enable fuzzing with clang libfuzzer")
option(LIBCPP       "Enable compiling with libc++ and linking with LLD" OFF)
option(USE_LLD      "Always link with LLD" OFF)
option(SINGLE_PROCESS "Disable fork() and run in single-process mode" OFF)

enable_testing()
add_subdirectory(cmake)
