cmake_minimum_required (VERSION 3.0.2)
project (all_vmods C)

if (VARNISH_PLUS)
	option(JWT_VMOD "Build the JWT VMOD" ON)
	option(WAF_VMOD "Build the WAF VMOD" OFF)
endif()

if (NOT VARNISH_PLUS)
	add_subdirectory(bodyaccess)
endif()
add_subdirectory(accept)
add_subdirectory(cookie)
add_subdirectory(debug)
add_subdirectory(example)
add_subdirectory(header)
if (LOCAL_VC)
	# can only be built with VC present
	add_subdirectory(std)
endif()
add_subdirectory(urlplus)
if (VARNISH_PLUS)
	add_subdirectory(libvjson)
	if (JWT_VMOD)
		add_subdirectory(jwt)
	endif()
	if (WAF_VMOD)
		add_subdirectory(waf)
	endif()
endif()

enable_testing()
