cmake_minimum_required (VERSION 3.0.2)
project (all_vmods C)

if (VARNISH_PLUS)
	option(VMOD_JWT "Build the JWT VMOD" ON)
	option(VMOD_WAF "Build the WAF VMOD" OFF)
endif()

if (VARNISH_PLUS)
	add_subdirectory(accept)
else()
	add_subdirectory(blob)
	#add_subdirectory(bodyaccess)
	add_subdirectory(cookie)
endif()
add_subdirectory(debug)
add_subdirectory(directors)
add_subdirectory(example)
add_subdirectory(header)
add_subdirectory(proxy)
add_subdirectory(purge)
if (VMOD_USE_LOCAL_VC)
	# can only be built with VC present
	add_subdirectory(std)
endif()
if (VARNISH_PLUS)
	add_subdirectory(libvjson)
	add_subdirectory(urlplus)
	if (VMOD_JWT)
		add_subdirectory(jwt)
	endif()
	if (VMOD_WAF)
		add_subdirectory(waf)
	endif()
endif()
#add_subdirectory(unix)
add_subdirectory(vtc)

enable_testing()
