cmake_minimum_required (VERSION 3.1.0)
project (all_vmods C)

if (VARNISH_PLUS)
	option(VMOD_JWT "Build the JWT VMOD" ON)
	option(VMOD_WAF "Build the WAF VMOD" OFF)
endif()

if (VARNISH_PLUS)
	add_subdirectory(accept)
	add_subdirectory(aclplus)
	add_subdirectory(bodyaccess)
	add_subdirectory(brotli)
	add_subdirectory(file)
	add_subdirectory(goto)

	add_subdirectory(blob)
	add_subdirectory(debug)
	add_subdirectory(directors)
	add_subdirectory(example)
	add_subdirectory(proxy)
	add_subdirectory(purge)
else()
	add_subdirectory(header)
	#add_subdirectory(cookie)
endif()
if (VMOD_USE_LOCAL_VC)
	# can only be built with VC present
	add_subdirectory(std)
endif()
if (VARNISH_PLUS)
	add_subdirectory(http)
	add_subdirectory(mse)
	add_subdirectory(libvjson)
	add_subdirectory(headerplus)
	add_subdirectory(riscv)
	add_subdirectory(rtstatus)
	add_subdirectory(session)
	add_subdirectory(str)
	add_subdirectory(synthbackend)
	add_subdirectory(urlplus)
	add_subdirectory(utils)
	if (VMOD_JWT)
		add_subdirectory(jwt)
	endif()
	if (VMOD_WAF)
		add_subdirectory(waf)
	endif()
	add_subdirectory(unix)
	add_subdirectory(vtc)
	add_subdirectory(xkey)
endif()

enable_testing()
